[package]
name = "backup-warden"
version = "0.1.0"
edition = "2021"
author = "Dylan Broda <dylan.broda@outlook.com>"

[dependencies]
notify = { version = "6.1.1", features = ["serde"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10.1"

[features]
windows = []
